--- a/css/styles.css
+++ b/css/styles.css
@@ -534,8 +534,8 @@ section {
 
 #proyectos .card-left .title {
   font-weight: 700;
-  font-size: 1.5rem;
-  margin: 100px 0 15px 0;
+  font-size: 2rem;
+  margin-bottom: 30px;
   text-align: center;
 }
 
