--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@ body.page-loader {
 
 body.page-loader main,
 body.page-loader .social__container,
-body.page-loader .toggle-nav {
+body.page-loader .toggle-nav,
+header .header-blur{
   opacity: 0;
 }
 
@@ -49,8 +50,8 @@ body.page-loader .toggle-nav {
 
 @keyframes charger {
   to {
-    top: 50px;
-    left: 50px;
+    top: 40px;
+    left: 35px;
   }
 }
 
@@ -134,12 +135,13 @@ body.page-loader .toggle-nav {
   }
   to {
     fill: #fff;
-    width: 50px;
+    width: 40px;
   }
 }
 
 header .home-logo {
   margin-top: 10px;
+  z-index: 5;
 }
 
 header {
@@ -158,6 +160,21 @@ header .toggle-nav {
   position: relative;
   width: 70px;
   height: 86px;
+  z-index: 6;
+}
+
+
+.header-blur{
+  width: 100vw;
+  height: 100px;
+  position:fixed;
+  top: -10px;
+  left: 0;
+  background-color: rgba(10, 10, 10, 0.85);
+  border: none;
+  border-radius: none;
+  z-index: 5;
+  transition: opacity .5s ease;
 }
 
 header .menu {
@@ -189,7 +206,6 @@ header .menu .menu__text {
 
 header .menu.normal {
   background: var(--orange);
-  z-index: 5;
 }
 header .menu.close {
   overflow: hidden;
@@ -198,7 +214,6 @@ header .menu.close {
   transition: transform 0.4s ease-in-out;
   transition-delay: 0.2s;
   background: var(--gray);
-  z-index: 6;
 }
 header .menu.close.hide-menu {
   transform: translate3d(0, -100%, 0);
@@ -343,8 +358,8 @@ header .nav-main {
   justify-content: center;
   opacity: 0;
 }
-.social__container.show{
-  opacity: 1;
+.show{
+  opacity: 1 !important;
 }
 
 .social__list:after {
