--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 header .toggle-nav {
@@ -482,6 +483,8 @@ section {
   justify-content: space-between;
   align-items: center;
   padding-top: 20px;
+  position: relative;
+  z-index: 0;
 }
 
 .profile__info {
@@ -509,6 +512,7 @@ section {
 .profile__img {
   transition: all 1s ease;
   filter: grayscale(1);
+
 }
 .profile__img:hover {
   filter: grayscale(0);
@@ -669,6 +673,8 @@ footer {
   .profile__content {
     flex-direction: row;
     padding: 20px;
+    position: relative;
+    z-index: 0;
   }
   .profile__info {
     width: 60%;
