BEST UPDATE - change logo/design

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,40 @@
-html{
-  scroll-behavior: smooth;
-}
+@import url('header.css');
+@import url('main.css');
+@import url('footer.css');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  --black: #101010;
-  --gray: #232222;
-  --Lightgray: #5e5d5d;
+  --main-bg: #161616;
+  --secondary-bg: #232222;
+  --secondary-bg-light: #5e5d5d;
+  --main-text: #ffffff;
+  --secondary-text: #b6b6b6;
   --orange: #fc6e20;
+  --vertical-gradient: linear-gradient(320deg, rgba(252,110,32,1) 0%, rgba(255,57,57,1) 100%);
+  --horizontal-gradient: linear-gradient(270deg, rgba(252,110,32,1) 0%, rgba(255,57,57,1) 100%);
+  --main-font:'Fraunces', serif;
+  --secondary-font:'Epilogue', sans-serif;
+  --title-font:'Roboto', sans-serif;
+}
 
-}
-a{color: inherit;text-decoration:none;}
-::-webkit-scrollbar{
-  width: 10px;
-}
-::-webkit-scrollbar-track{
-  background: var(--gray);
-}
-::-webkit-scrollbar-thumb{
-  background: var(--orange);
-}
 body {
-  background: var(--black);
-  overflow-x: hidden;
+  background: var(--main-bg);
 }
 
-body.page-loader {
-  overflow: hidden;
-}
-.hidden{
-  overflow: hidden;
+.reset__list{
+  list-style: none;
 }
 
-body.page-loader main,
-body.page-loader .social__container,
-body.page-loader .toggle-nav,
-header .header-blur{
-  opacity: 0;
-}
-
-.home-logo.charging {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  animation: charger 0.5s linear forwards 4.5s;
-}
-
-@keyframes charger {
-  to {
-    top: 40px;
-    left: 35px;
-  }
-}
-
-.home-logo.charging #logo {
-  width: 200px;
+a{
+  text-decoration: none;
+  color: var(--main-text);
 }
 
 .container {
   width: 100%;
-  max-width: 1000px;
+  max-width: 960px;
   margin: 0 auto;
   padding: 30px;
 }
@@ -80,7 +53,7 @@ header .header-blur{
   bottom: 0;
   left: 0;
   transform: scaleX(0);
-  background-color: var(--orange);
+  background: var(--horizontal-gradient);
   transform-origin: bottom right;
   transition: transform 0.35s ease-out;
 }
@@ -98,521 +71,6 @@ header .header-blur{
   text-decoration: none;
 }
 
-#logo {
-  width: 40px;
-  animation: fill 1s ease forwards 3.5s;
-}
-.resume-button{
-  border: 2px solid var(--orange);
-  padding: 15px 50px;
-  color: var(--orange);
-  font-family: 'Poppins',sans-serif;
-  margin-bottom: 50px;
-  border-radius: 10px;
-  transition: background 0.4s ease;
-}
-.resume-button:hover{
-  background: rgba(252, 110, 32, 0.3);
-}
-
-
-#logo path:nth-child(1) {
-  stroke-dasharray: 503px;
-  stroke-dashoffset: 503px;
-  animation: line-anim 2s ease forwards 1.8s;
-}
-#logo path:nth-child(2) {
-  stroke-dasharray: 503px;
-  stroke-dashoffset: 503px;
-  animation: line-anim 2s ease forwards 0.6s;
-}
-#logo path:nth-child(3) {
-  stroke-dasharray: 163px;
-  stroke-dashoffset: 163px;
-  animation: line-anim 2s ease forwards 0.6s;
-}
-
-@keyframes line-anim {
-  from {
-    stroke: white;
-  }
-  to {
-    stroke-dashoffset: 0;
-    stroke: white;
-  }
-}
-
-@keyframes fill {
-  from {
-    fill: transparent;
-  }
-  to {
-    fill: #fff;
-    width: 40px;
-  }
-}
-
-header .home-logo {
-  margin-top: 10px;
-  z-index: 5;
-}
-
-header {
-  padding: 0 20px;
-  display: flex;
-  justify-content: flex-end;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-header .toggle-nav {
-  background: none;
-  border: none;
-  position: relative;
-  width: 70px;
-  height: 86px;
-  z-index: 6;
-}
-
-
-.header-blur{
-  width: 100vw;
-  height: 100px;
-  position:fixed;
-  top: -10px;
-  left: 0;
-  background-color: rgba(10, 10, 10, 0.85);
-  border: none;
-  border-radius: none;
-  z-index: 5;
-  transition: opacity .5s ease;
-}
-
-header .menu {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: #fff;
-  padding: 20px 0 10px 0;
-  border: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: height 0.3s ease;
-}
-
-header .menu:hover {
-  height: calc(86px + 6px);
-}
-
-header .menu .menu__text {
-  margin-top: 10px;
-  font-weight: 700;
-  font-family: "Poppins", serif;
-}
-
-header .menu.normal {
-  background: var(--orange);
-}
-header .menu.close {
-  overflow: hidden;
-  height: 86px;
-  transform: translate3d(0);
-  transition: transform 0.4s ease-in-out;
-  transition-delay: 0.2s;
-  background: var(--gray);
-}
-header .menu.close.hide-menu {
-  transform: translate3d(0, -100%, 0);
-  transition-delay: 0;
-}
-
-header .menu.normal .menu__burger {
-  width: 1.5rem;
-  height: 1.125rem;
-  background: transparent;
-  position: relative;
-}
-
-header .menu.close .menu__burger {
-  width: 21px;
-  height: 25px;
-  background: transparent;
-  position: relative;
-}
-
-header .menu.normal .menu__burger .line {
-  width: 100%;
-  height: 2px;
-  background: #fff;
-  position: absolute;
-  left: 0;
-  transform: scale(0, 1);
-  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1),
-    -webkit-transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
-  transform-origin: right center;
-}
-
-header .menu.normal .menu__burger .line:nth-child(1) {
-  top: 0px;
-}
-header .menu.normal .menu__burger .line:nth-child(2) {
-  top: 8px;
-  transition-delay: 0.2s;
-}
-header .menu.normal .menu__burger .line:nth-child(3) {
-  top: 16px;
-  transition-delay: 0.3s;
-}
-
-header .menu.normal:hover .menu__burger .line {
-  transform-origin: left center;
-  transform: scale(1, 1);
-}
-
-header .menu.close .menu__burger .line {
-  width: 100%;
-  height: 2px;
-  background: #fff;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: scale(1, 1);
-  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1),
-    -webkit-transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-header .menu.close .menu__burger .line:nth-child(1) {
-  transform: scale(1, 1) rotate(45deg);
-}
-header .menu.close .menu__burger .line:nth-child(2) {
-  transform: scale(1, 1) rotate(-45deg);
-}
-
-header .nav-main {
-  width: 100vw;
-  height: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  transition: height 0.3s cubic-bezier(0.345, 0, 0, 1);
-  transition-delay: 0.1s;
-  z-index: 5;
-  overflow: hidden;
-}
-.nav-main .nav-main__background {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: var(--orange);
-  z-index: 10;
-  overflow: hidden;
-}
-
-.nav-main.active {
-  height: 100%;
-}
-
-.nav-main .nav-main__wrap {
-  width: 100%;
-  min-height: 100vh;
-  position: absolute;
-  z-index: 12;
-}
-
-.nav-main .nav-main__top {
-  width: 100%;
-  padding: 30px;
-  font-family: "poppins";
-  font-size: 0.75rem;
-}
-.nav-main .nav-main__top h2 {
-  display: inline-block;
-  cursor: pointer;
-}
-.nav-main .nav-main__content {
-  width: 100%;
-  font-size: 3rem;
-  text-align: center;
-  font-family: "Fraunces", sans-serif;
-  font-weight: 900;
-}
-.nav-main .nav-main__list {
-  height: 100%;
-}
-.nav-main .nav-main__item {
-  display: flex;
-  justify-content: center;
-  margin: 100px 0;
-  transition: color 0.4s ease;
-  cursor: pointer;
-}
-.nav-main .nav-main__item:hover {
-  color: white;
-}
-.nav-main .nav-main__item .number-count {
-  font-size: 1.5rem;
-  margin-right: 15px;
-}
-
-/* SOCIAL */
-
-.social__container {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  opacity: 0;
-}
-.show{
-  opacity: 1 !important;
-}
-
-.social__list:after {
-  content: "";
-  display: none;
-  width: 1px;
-  height: 90px;
-  margin: 0px auto;
-  background-color: #fff;
-}
-
-.social__item {
-  list-style: none;
-  margin: 20px 20px;
-  transition: transform 0.2s ease;
-  display: inline-block;
-}
-
-.social__item a {
-  color: var(--Lightgray);
-  font-size: 1.5rem;
-  transition: color 0.4s ease;
-}
-.social__item:hover {
-  transform: translateY(-5px);
-}
-.social__item:hover a {
-  color: var(--orange);
-}
-
-/* MAIN */
-
-#welcome {
-  padding-top: -100px;
-}
-
-section {
-  width: 100%;
-  min-height: 100vh;
-  height: 100%;
-  margin: 200px 0;
-}
-
-.welcome__container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  padding-left: 25px;
-  font-family: "poppins", sans-serif;
-}
-
-.welcome__container .welcome__top {
-  font-size: 1rem;
-  font-weight: 700;
-}
-.welcome__container h1 {
-  font-size: 2rem;
-  color: white;
-}
-.welcome__container h2 {
-  font-size: 2rem;
-  color: var(--Lightgray);
-}
-.welcome__container .introduction {
-  margin-top: 20px;
-  width: 90%;
-  color: #fff;
-}
-
-.menu__counter-number-svg {
-  width: 75px;
-  height: 75px;
-}
-.menu__counter-title {
-  display: inline-block;
-  font-family: "Fraunces", sans-serif;
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 20px 0;
-}
-.menu__counter-title:after {
-  content: "";
-  width: 100vw;
-  height: 2px;
-  background: var(--orange);
-  position: absolute;
-  left: 0;
-  top: 65px;
-}
-.menu__counter-number {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  z-index: -1;
-}
-
-
-.menu__counter-number .menu__svg {
-  filter: url(#gooey);
-  position: relative;
-  z-index: 1;
-}
-
-.menu__counter-total {
-  font-family: "poppins", sans-serif;
-  font-weight: 900;
-  font-size: 1.5rem;
-  color: #fff;
-}
-
-.profile__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 20px;
-  position: relative;
-  z-index: 0;
-}
-
-.profile__info {
-  width: 90%;
-  color: #fff;
-  font-family: "poppins", sans-serif;
-}
-.profile__info p {
-  margin: 20px 0;
-}
-
-.profile__info .profile__tec {
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-}
-.profile__info .profile__tec li {
-  list-style: none;
-  margin: 10px 0;
-}
-.profile__info .profile__tec i {
-  color: var(--orange);
-  margin-right: 10px;
-}
-.profile__img {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-}
-.profile__img:hover img{
-  filter: grayscale(0);
-}
-.profile__img img {
-  margin: 40px 0;
-  width: 100%;
-  filter: grayscale(1);
-  max-width: 300px;
-  transition: all 1s ease;
-}
-
-#proyectos .card {
-  display: flex;
-  font-family: "poppins", sans-serif;
-  display: flex;
-  flex-direction: column-reverse;
-  margin: 100px 0;
-}
-#proyectos .card-left {
-  width: 100%;
-  padding: 20px;
-  color: #fff;
-}
-#proyectos .card-right {
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-#proyectos .card-left .links {
-  margin-top: 30px;
-}
-#proyectos .card-left .links a {
-  margin: 0 15px;
-  color: var(--Lightgray);
-  font-size: 1.7rem;
-}
-
-#proyectos .card-left .title {
-  font-weight: 700;
-  font-size: 2rem;
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-#proyectos .card__img {
-  width: 100%;
-  background: transparent;
-  margin: 0;
-  padding: 0;
-}
-#proyectos .card__img img {
-  width: 100%;
-}
-
-#proyectos .card-right ul li {
-  list-style: none;
-  display: inline-block;
-  margin: 10px 10px;
-  font-size: 0.65rem;
-  text-align: start;
-  color: var(--Lightgray);
-}
-
-#contacto .contacto__container {
-  padding: 100px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: "poppins", sans-serif;
-}
-#contacto .title {
-  font-size: 2rem;
-  color: var(--Lightgray);
-}
-#contacto .text {
-  color: #fff;
-  margin-top: 40px;
-  width: 90%;
-  text-align: center;
-}
 
 .button__container {
   display: flex;
@@ -638,132 +96,9 @@ section {
   background: rgba(252, 110, 32, 0.3);
 }
 
-footer {
-  font-family: "poppins", sans-serif;
-  text-align: center;
-  margin: 20px 0;
-  color: #fff;
-}
 
-@media (min-width: 768px) {
-  .welcome__container .welcome__top {
-    font-size: 1.5rem;
-  }
-  .welcome__container h1 {
-    font-size: 3.5rem;
-  }
-  .welcome__container h2 {
-    font-size: 3rem;
-  }
-  .menu__counter-number:before {
-    font-size: 1.5rem;
-    top: 5%;
-  }
-  .profile__info p {
-    font-size: 0.75rem;
-  }
-  .profile__info li {
-    font-size: 0.8rem;
-  }
-  #proyectos .card-right ul li {
-    font-size: 0.85rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .welcome__container .welcome__top {
-    font-size: 1.5rem;
-  }
-  .welcome__container h1 {
-    font-size: 5rem;
-  }
-  .welcome__container h2 {
-    font-size: 4.5rem;
-  }
-  .welcome__container .introduction {
-    width: 50%;
-  }
-  .menu__counter-number:before {
-    font-size: 1.5rem;
-    top: 5%;
-  }
-  .profile__content {
-    flex-direction: row;
-    padding: 20px;
-    position: relative;
-    z-index: 0;
-  }
-  .profile__info {
-    width: 60%;
-    color: #fff;
-  }
-  .profile__info p {
-    font-size: 0.9rem;
-  }
-  .profile__info li {
-    font-size: 0.75rem;
-  }
-  .profile__img {
-    width: 30%;
-    color: #fff;
-  }
-  #proyectos .card-right ul li {
-    font-size: 0.85rem;
-  }
-  .card {
-    flex-direction: row !important;
-    padding: 20px;
-  }
-  .card-left {
-    padding: 40px;
-  }
-  .card-right {
-    width: 60%;
-  }
-  #proyectos .card-left .title {
-    font-weight: 700;
-    font-size: 1.8rem;
-    margin: 15px 0;
-    text-align: start;
-  }
-  .social__container {
-    position: fixed;
-    transition: bottom 1s ease;
-    bottom: -300px;
-    right: 0;
-  }
-  .social__item,
-  .social__list:after {
-    display: block;
-  }
-  #contacto .text {
-    width: 50%;
-  }
-  .nav-main .nav-main__item {
-    font-size: 5rem;
-  }
-  #numero-1 {
-    width: 200px;
-  }
-}
-
-@keyframes anim1 {
-  from {
-    transform: translateY(-100px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes anim2 {
-  from {
-    transform: translateY(200px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
+@keyframes bg-gradient-animation {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
 }
