--- a/css/header.css
+++ b/css/header.css
@@ -1,39 +1,41 @@
 header {
   position: fixed;
   width: 100%;
+  max-height: 65px;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   padding: 20px;
   background: var(--main-bg);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.logo{
-  width: 100%;
-}
-.logo img{
-  max-width: 35px;
-}
 
 nav.nav-main {
-  color: #fff;
+  color: var(--main-text);
   font-family: var(--secondary-font);
   position: fixed;
   top: 0;
-  left: 0;
+  right: -100%;
   width: 100%;
-  height: 0;
+  max-width: 400px;
+  height: 100vh;
   overflow: hidden;
   max-height: 100vh;
   background: var(--vertical-gradient);
-  transition: height 0.3s ease-in-out;
+  transition: right 0.4s ease-in-out;
 }
 
 nav.active {
-  height: 100%;
+  right: 0;
 }
+
+main{
+  transition: padding-right .3s ease;
+}
+
+
 
 .nav-main__wrap {
   width: 100%;
@@ -43,6 +45,7 @@ nav.active {
   align-items: start;
   flex-direction: column;
   padding: 20px 10px;
+  color: var(--main-text);
 }
 
 .nav-mobile__name {
@@ -53,10 +56,12 @@ nav.active {
 }
 
 .nav-main__content {
+  width: 100%;
   height: 100%;
 }
 
 .nav-main__list {
+  width: 100%;
   height: 100%;
   flex-direction: column;
   display: flex;
@@ -64,36 +69,40 @@ nav.active {
   align-items: start;
 }
 
-.nav-main__item {
+.nav-main__item{
   margin: 50px 0;
   text-align: start;
   font-weight: 900;
   font-size: 2.3rem;
 }
 
-.social__container {
-  position: absolute;
-  bottom: 0;
-  right: 20px;
+.nav-main__item a{
+  color: var(--main-text);
 }
 
+.social__container {
+  position: fixed;
+  bottom: 10px;
+  right: 20px;
+  z-index: 20;
+}
 .social__list {
+  display: flex;
   flex-direction: column;
 }
-
 .social__item {
-  margin: 35px 0;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
+  margin: 20px 0;
 }
 
 header .toggle-nav {
   background: none;
   border: none;
-  position: absolute;
+  position: relative;
   width: 70px;
   height: 86px;
   z-index: 6;
-  top: 20px;
+  top: 25px;
   right: 20px;
   outline: none;
 }
@@ -193,38 +202,9 @@ header .menu.close .menu__burger .line:nth-child(2) {
   transform: scale(1, 1) rotate(-45deg);
 }
 
-@media screen and (min-width: 1200px) {
-  header .logo{
-    width: 50% !important;
-  }
-  .logo img{
-    max-width: 20px;
-  }
-  .toggle-nav {
-    display: none;
-  }
-  .nav-mobile__name {
-    display: none;
-  }
-  nav.nav-main {
-    color: #fff;
-    font-family: var(--secondary-font);
-    position: relative;
-    height: 100%;
-    background: transparent;
-  }
-  .nav-main__wrap {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0;
-  }
-  .nav-main__list {
-    flex-direction: row;
-  }
-  .nav-main__item {
-    font-weight: 400;
-    font-size: 1rem;
-    margin: 0 40px;
+@media screen and (min-width: 768px){
+  main.active{
+    padding-right: 400px;
   }
   .social__container {
     position: relative;
@@ -234,6 +214,7 @@ header .menu.close .menu__burger .line:nth-child(2) {
     flex-direction: row;
   }
   .social__item {
+    font-size: 1.5rem;
     margin: 0 40px;
   }
 }
