--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,11 @@ section {
   margin-top: 100px;
   font-family: var(--secondary-font);
   color: var(--main-text);
+
 }
 section img {
   width: 100%;
-  max-width: 400px;
+  max-width: 600px;
 }
 .title__container .title {
   font-family: var(--title-font);
@@ -43,7 +44,6 @@ section img {
 .welcome__container .name {
   font-family: var(--main-font);
   font-size: 3rem;
-  line-height: 38px;
   margin-bottom: 1.1rem;
 }
 
@@ -86,36 +86,127 @@ section img {
   margin: 10px 0;
 }
 
+#sobre-mi .title__container .title {
+  text-align: start;
+}
+
 #proyectos .card__container {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 10px;
+}
+
+#proyectos .card {
+  position: relative;
+  max-width: 690px;
+}
+
+#proyectos .card:hover .big-number-fake {
+  color: var(--orange);
+  background: var(--horizontal-gradient);
+  background-size: 400% 400%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: bg-gradient-animation 1.5s ease infinite;
+}
+
+#proyectos .card .big-number-fake {
+  transition: all 0.3s ease;
+  font-weight: 900;
+  font-family: var(--secondary-font);
+  position: absolute;
+  top: -0.5rem;
+  left: 0;
+  transition: color 0.5s ease;
+  z-index: 1;
+  font-size: 6rem;
+  color: rgba(255, 255, 255, 0.04);
+}
+#proyectos .card:nth-child(2) .big-number-fake {
+  right: 100px;
 }
 
 #proyectos .card .card__link {
   display: flex;
   flex-direction: column-reverse;
-  margin: 50px 0;
   color: var(--secondary-text);
-  max-width: 400px;
+  width: 100%;
   border: 1px solid var(--secondary-bg-light);
-  margin-left: 0;
+  margin: 50px 0;
 }
-
-#proyectos .card img {
+#proyectos .card .card__img {
+  position: relative;
+  overflow: hidden;
+}
+#proyectos .card .card__img img {
   width: 100%;
   max-width: 100%;
+  transition: transform 5s ease;
+}
+#proyectos .card .card-right {
+  overflow: hidden;
+}
+#proyectos .card:hover .card__img img {
+  transform: scale(1.1);
 }
 
-.technologies {
+#proyectos .card .card__hover {
+  align-items: center;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: opacity 0.25s, -webkit-transform 0.2s;
+}
+
+#proyectos .card:hover .card__hover {
+  opacity: 1;
+}
+
+#proyectos .card .card__btn {
+  background-color: transparent;
+  border: #fff 1px solid;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: none;
+  cursor: pointer;
+  display: inline-block;
+  font-family: var(--secondary-font);
+  font-size: 1rem;
+  max-width: 100%;
+  padding: 1rem 2rem;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  transition: background-color 0.2s, border-color 0.2s, color 0.2s;
+  white-space: nowrap;
+}
+#proyectos .card .card__btn:hover {
+  border-color: var(--orange);
+  color: var(--orange);
+}
+.technologies .reset__list {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   padding: 10px;
 }
-.technologies p.order {
-  font-weight: 800;
-  margin: 0 20px;
+#proyectos .technologies ul li {
+  font-size: 12px;
+  margin: 5px 10px;
 }
 
 #proyectos .card .card-left {
@@ -138,10 +229,6 @@ section img {
   margin: 50px 0 20px;
   color: var(--main-text);
 }
-#proyectos .technologies ul li {
-  font-size: 12px;
-  margin: 5px 0;
-}
 
 #proyectos .button__container {
   width: 100%;
@@ -150,12 +237,45 @@ section img {
 #contacto {
   text-align: center;
   line-height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
   color: var(--secondary-text);
+}
+#contacto .title {
+  text-align: center;
 }
 
 #contacto .text {
   max-width: 500px;
   margin: 20px auto;
+}
+#contacto .btn__hover-text {
+  position: relative;
+}
+#contacto .btn:hover .btn__hover-text {
+  bottom: 0;
+}
+
+#contacto .btn__hover-text {
+  position: absolute;
+  transition: bottom 0.3s ease;
+  width: 100%;
+  height: 100%;
+  font-weight: 900;
+  bottom: -100%;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--main-text);
+  background-color: var(--orange);
+  transform-origin: bottom;
+}
+#contacto .btn__hover-text i{
+  margin: 0 10px;
 }
 
 @media screen and (min-width: 960px) {
@@ -193,7 +313,32 @@ section img {
   #proyectos .card__container {
     align-items: flex-start;
   }
+  #proyectos .card .card__link {
+    display: flex;
+    flex-direction: column-reverse;
+    color: var(--secondary-text);
+    width: 100%;
+    border: 1px solid var(--secondary-bg-light);
+    margin: 20px;
+  }
+
+  #proyectos .card:nth-child(1) {
+    width: 60%;
+  }
   #proyectos .card:nth-child(2) {
-    margin-left: 50%;
+    width: 30%;
+    margin-top: 250px;
+  }
+  #proyectos .card:nth-child(3) {
+    margin-top: -50px;
+    margin-right: 50px;
+  }
+  #proyectos .card:nth-child(3),
+  #proyectos .card:nth-child(4) {
+    width: 40%;
+  }
+  #proyectos .card .big-number-fake {
+    top: -2rem;
+    font-size: 8rem;
   }
 }
