--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   --main-bg: #161616;
   --secondary-bg: #232222;
   --secondary-bg-light: #5e5d5d;
-  --main-text: #ffffff;
+  --main-text: #f5f5f5;
   --secondary-text: #b6b6b6;
   --orange: #fc6e20;
   --vertical-gradient: linear-gradient(320deg, rgba(252,110,32,1) 0%, rgba(255,57,57,1) 100%);
@@ -29,7 +29,8 @@ body {
 
 a{
   text-decoration: none;
-  color: var(--main-text);
+  color: var(--secondary-bg-light);
+  transition: color .3s ease;
 }
 
 .container {
@@ -37,6 +38,11 @@ a{
   max-width: 960px;
   margin: 0 auto;
   padding: 30px;
+}
+
+.hover-color:hover{
+  transition: color 0.3s ease;
+  color: var(--main-text);
 }
 
 .hover-underline {
@@ -83,11 +89,12 @@ a{
   outline: none;
   border: 2px solid var(--orange);
   border-radius: 5px;
-  margin: 50px auto;
   font-weight: 900;
   font-size: 1.2rem;
   transition: background .3s ease;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 .btn a {
   color: var(--orange);
