--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ section {
   margin-top: 100px;
   font-family: var(--secondary-font);
   color: var(--main-text);
+  overflow: hidden;
 
 }
 section img {
@@ -95,7 +96,7 @@ section img {
   justify-content: center;
   align-items: center;
   flex-direction:column;
-  text-align: end;
+  text-align: center;
 }
 #sobre-mi .skills .title{
   font-size: 2rem;
@@ -104,8 +105,8 @@ section img {
 
 #sobre-mi .skills-list{
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
 }
